--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chat</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Chat</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
-<body>
-    <h1>Chat</h1>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js" integrity="sha512-oFOCo2/3DtjrJG4N27BjSLQWoiBv171sK6a+JiWjp/7agxC2nCUP358AqzxkBUb5jX8g6CYLPdSKQTbC0weCwA==" crossorigin="anonymous"></script>
-    <script>
-        const clientSocket = io('http://localhost:8080');
-        clientSocket.on('connection', (data) => {
-            console.log(data);
-        })
-    </script>
+<body class="container">
+  <h1 class="mt-5">Chat</h1>
+  <hr>
+  <form id="chatForm">
+    <div class="row">
+      <div class="col-8">
+        <input class="form-control" type="text" id="txtmessage" placeholder="Message">
+      </div>
+      <div class="col-4">
+        <button type="submit" class="btn btn-primary">
+          Send
+        </button>
+      </div>
+    </div>
+  </form>
+  <div class="row">
+    <div class="col">
+      <ul id="messagesList" class="mt-2">
+
+      </ul>
+    </div>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js" integrity="sha512-oFOCo2/3DtjrJG4N27BjSLQWoiBv171sK6a+JiWjp/7agxC2nCUP358AqzxkBUb5jX8g6CYLPdSKQTbC0weCwA==" crossorigin="anonymous"></script>
+  <script>
+    const clientSocket = io('http://localhost:8080');
+    const form = document.querySelector('#chatForm');
+    const messagesList = document.querySelector('#messagesList')
+    const txtFieldMessage = document.querySelector('#txtmessage')
+
+    form.addEventListener('submit', (event) =>{
+      event.preventDefault();
+      const message = txtFieldMessage.value;
+      console.log(message);
+    });
+    clientSocket.on('connection_server', (data) => {
+      console.log(data);
+      setTimeout(()=> {
+        clientSocket.emit('connection_client', {mesg: 'Delivered', date: new Date()});
+      }, 2000)
+    })
+  </script>
 </body>
 </html>
